Added wiki link. Added lato font.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <p>Simply download the latest version from GitHub and build it - the example application included shows how you can build a Visual Studio style tabbed interface within minutes.</p>
 
+<p>For more detailed information and tutorials check out the <a href="https://github.com/RobinPerris/DarkUI/wiki">GitHub project wiki.</a></p>
+
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots.</h3>
 
