--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>DarkUI by RobinPerris</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<title>DarkUI - Dark themed control and docking library for .NET WinForms</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>DarkUI</h1>
-        <p>Dark themed control and docking library for .NET WinForms.</p>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="stylesheet" href="stylesheets/github-light.css">
+		<meta name="viewport" content="width=device-width">
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div class="wrapper">
+			<header>
+				<h1>DarkUI</h1>
+				
+				<p>Dark themed control and docking library for .NET WinForms.</p>
+				<p class="view"><a href="https://github.com/RobinPerris/DarkUI">View the Project on GitHub <small>RobinPerris/DarkUI</small></a></p>
 
-        <p class="view"><a href="https://github.com/RobinPerris/DarkUI">View the Project on GitHub <small>RobinPerris/DarkUI</small></a></p>
+				<ul>
+					<li><a href="https://github.com/RobinPerris/DarkUI/zipball/master">Download <strong>ZIP File</strong></a></li>
+					<li><a href="https://github.com/RobinPerris/DarkUI/tarball/master">Download <strong>TAR Ball</strong></a></li>
+					<li><a href="https://github.com/RobinPerris/DarkUI">View On <strong>GitHub</strong></a></li>
+				</ul>
+			</header>
 
+			<section>
+				<h3>
+				<a id="about-darkui" class="anchor" href="#about-darkui" aria-hidden="true"><span class="octicon octicon-link"></span></a>About DarkUI.</h3>
 
-        <ul>
-          <li><a href="https://github.com/RobinPerris/DarkUI/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/RobinPerris/DarkUI/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/RobinPerris/DarkUI">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="about-darkui" class="anchor" href="#about-darkui" aria-hidden="true"><span class="octicon octicon-link"></span></a>About DarkUI.</h3>
+				<p>DarkUI is an attempt to create a simple, extensible control library which emulates the look and feel of popular tabbed document interfaces such as Visual Studio, Photoshop, WebStorm, and XCode. Originally just a collection of bug fixes and enhancements built on top of WinForms, it has now evolved in to a fully working docking and control library.</p>
 
-<p>DarkUI is an attempt to create a simple, extensible control library which emulates the look and feel of popular tabbed document interfaces such as Visual Studio, Photoshop, WebStorm, and XCode. Originally just a collection of bug fixes and enhancements built on top of WinForms, it has now evolved in to a fully working docking and control library.</p>
+				<h3>
+				<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use.</h3>
 
-<h3>
-<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use.</h3>
+				<p>DarkUI is easy to use. It uses a mix of inherited control types (text box, button, label etc.) and a few completely custom additions (dock panel, list view, scrollbar etc.) If you've ever built a WinForms application before, you should be able to easily use DarkUI in exactly the same way.</p>
 
-<p>DarkUI is easy to use. It uses a mix of inherited control types (text box, button, label etc.) and a few completely custom additions (dock panel, list view, scrollbar etc.) If you've ever built a WinForms application before, you should be able to easily use DarkUI in exactly the same way.</p>
+				<p>Simply download the latest version from GitHub and build it - the example application included shows how you can build a Visual Studio style tabbed interface within minutes.</p>
 
-<p>Simply download the latest version from GitHub and build it - the example application included shows how you can build a Visual Studio style tabbed interface within minutes.</p>
+				<p>For more detailed information and tutorials check out the <a href="https://github.com/RobinPerris/DarkUI/wiki">GitHub project wiki.</a></p>
 
-<p>For more detailed information and tutorials check out the <a href="https://github.com/RobinPerris/DarkUI/wiki">GitHub project wiki.</a></p>
+				<h3>
+				<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots.</h3>
 
-<h3>
-<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots.</h3>
-
-<p>[TBA]</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/RobinPerris">RobinPerris</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-27393933-3");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
+				<p>[TBA]</p>
+			</section>
+		
+			<footer>
+				<p>This project is maintained by <a href="https://github.com/RobinPerris">RobinPerris</a></p>
+				<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+			</footer>
+		</div>
+		
+		<script src="javascripts/scale.fix.js"></script>
+		<script type="text/javascript">
+			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		
+		<script type="text/javascript">
+			try {
+				var pageTracker = _gat._getTracker("UA-27393933-3");
+				pageTracker._trackPageview();
+			} catch(err) {}
+		</script>
+	</body>
 </html>
