--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 			<section>
 				<h3>
-				<a id="about-darkui" class="anchor" href="#about-darkui" aria-hidden="true"><span class="octicon octicon-link"></span></a>About DarkUI.</h3>
+				<a id="about-darkui" class="anchor" href="#about-darkui" aria-hidden="true"><span class="octicon octicon-link"></span></a>About DarkUI</h3>
 
 				<p>DarkUI is an attempt to create a simple, extensible control library which emulates the look and feel of popular tabbed document interfaces such as Visual Studio, Photoshop, WebStorm, and XCode. Originally just a collection of bug fixes and enhancements built on top of WinForms, it has now evolved in to a fully working docking and control library.</p>
 
 				<h3>
-				<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use.</h3>
+				<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h3>
 
 				<p>DarkUI is easy to use. It uses a mix of inherited control types (text box, button, label etc.) and a few completely custom additions (dock panel, list view, scrollbar etc.) If you've ever built a WinForms application before, you should be able to easily use DarkUI in exactly the same way.</p>
 
@@ -43,9 +43,12 @@
 				<p>For more detailed information and tutorials check out the <a href="https://github.com/RobinPerris/DarkUI/wiki">GitHub project wiki.</a></p>
 
 				<h3>
-				<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots.</h3>
+				<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 
-				<p>[TBA]</p>
+				<p><img src="images/docking.png" /></p>
+				<p><img src="images/controls.png" /></p>
+				<p><img src="images/error.png" /></p>
+				<p><img src="images/info.png" /></p>
 			</section>
 		
 			<footer>
