--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>DarkUI - Dark themed control and docking library for .NET WinForms</title>
 
+		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="stylesheets/styles.css">
 		<link rel="stylesheet" href="stylesheets/github-light.css">
 		<meta name="viewport" content="width=device-width">
@@ -36,11 +37,9 @@
 				<h3>
 				<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h3>
 
-				<p>DarkUI is easy to use. It uses a mix of inherited control types (text box, button, label etc.) and a few completely custom additions (dock panel, list view, scrollbar etc.) If you've ever built a WinForms application before, you should be able to easily use DarkUI in exactly the same way.</p>
+				<p>The best way to learn how to use DarkUI is to check out the Example project included with the source code. It'll show you how to use the majority of the forms, controls, and docking components.</p>
 
-				<p>Simply download the latest version from GitHub and build it - the example application included shows how you can build a Visual Studio style tabbed interface within minutes.</p>
-
-				<p>For more detailed information and tutorials check out the <a href="https://github.com/RobinPerris/DarkUI/wiki">GitHub project wiki.</a></p>
+				<p>You can also read the <a href="https://github.com/RobinPerris/DarkUI/wiki/Getting-started">GitHub project wiki.</a> This contains all the information you need to get started as well as more detailed information and guides.</p>
 
 				<h3>
 				<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
