--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>DarkUI - Dark themed control and docking library for .NET WinForms</title>
 
-		<link rel="icon" href="favicon.ico">
+		<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 		<link rel="stylesheet" href="stylesheets/styles.css">
 		<link rel="stylesheet" href="stylesheets/github-light.css">
 		<meta name="viewport" content="width=device-width">
