--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 			</header>
 
 			<section>
+			
+				<image src="images/logo.png" />
+				<br /><br />
+			
 				<h3>
 				<a id="about-darkui" class="anchor" href="#about-darkui" aria-hidden="true"><span class="octicon octicon-link"></span></a>About DarkUI</h3>
 
