--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<section>
 			
-				<image src="images/logo.png" />
+				<image src="images/logo-500.png" />
 				<br /><br />
 			
 				<h3>
